--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
     <img src="images/digital-crucifix.jpg" alt="digital crucifix" class="chaotic-image" style="top: 350px; left: 35%;">
   </div>
 
-  <header>
+  <!-- Заголовок с крестом -->
+  <div class="site-title">
+    <img src="images/painted-cross.png" alt="cross" class="site-cross">
     <h1>Moth Damien</h1>
-  </header>
-  <nav>
+  </div>
+
+  <!-- Горизонтальная навигация -->
+  <nav class="horizontal-nav">
     <a href="skull.html">🧠 Inside the Skull</a>
     <a href="diagnosis.html">🩸 Diagnosis</a>
     <a href="simulation.html">🪐 Simulation</a>
@@ -28,6 +32,7 @@
     <a href="archive.html">📓 Archive</a>
     <a href="chat.html">🤖 Chat: "I heard you"</a>
   </nav>
+
   <main>
     <section>
       <h2>Inside the Skull</h2>
