--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
 </head>
 <body>
 
+  <!-- Амбиграмма/фоновые фразы -->
+  <div class="background-phrases">
+    <div class="ambigram">THE BODY IS A VESSEL</div>
+    <div class="floating-text">You are already dead.</div>
+    <div class="floating-text">404: meaning not found</div>
+    <div class="floating-text">Sleep.exe running</div>
+    <div class="floating-text">Echoes in blood</div>
+    <div class="floating-text">Null memory</div>
+    <div class="floating-text">[UNDEFINED]</div>
+  </div>
+
   <!-- Хаотично расположенные изображения -->
   <div class="chaotic-images">
     <img src="images/giant-doll.jpg" alt="giant doll" class="chaotic-image" style="top: 60px; left: 8%;">
@@ -18,7 +29,7 @@
   <!-- Заголовок с крестом -->
   <div class="site-title">
     <img src="images/painted-cross.png" alt="cross" class="site-cross">
-    <h1>Moth Damien</h1>
+    <h1 class="glitch-title">Moth Damien</h1>
   </div>
 
   <!-- Горизонтальная навигация -->
@@ -36,31 +47,31 @@
   <main>
     <section>
       <h2>Inside the Skull</h2>
-      <p>This is where thoughts live and die under the screen’s light. Pseudo-philosophy, schizobabble, moldy brain soup and stray ramblings that somehow hit the spot.</p>
+      <p>This is where thoughts live and die under the screen’s light. <span class="flicker">Pseudo-philosophy</span>, <span class="flicker">schizobabble</span>, moldy brain soup and stray ramblings that somehow hit the spot.</p>
     </section>
     <section>
       <h2>Diagnosis</h2>
-      <p>Psychiatry doesn’t cure — it classifies monsters. Notes on madness: bipolarity, psychosis, meds, private hell and a bit of medicine for the already lost.</p>
+      <p>Psychiatry doesn’t cure — it <span class="flicker">classifies monsters</span>. Notes on madness: bipolarity, psychosis, meds, private hell and a bit of medicine for the already lost.</p>
     </section>
     <section>
       <h2>Simulation</h2>
-      <p>Space doesn’t attract — it watches. Posts about the universe, time, black holes, simulations and illusions you’ll die in without knowing if you were ever alive.</p>
+      <p>Space doesn’t attract — it watches. Posts about the universe, time, black holes, <span class="flicker">simulations</span> and illusions you’ll die in without knowing if you were ever alive.</p>
     </section>
     <section>
       <h2>Lobotomy Bandage</h2>
-      <p>Psychology for those already broken who like digging through their ruins. Theories, trauma, emotions like a joke — no sobbing, just blood.</p>
+      <p>Psychology for those already broken who like digging through their ruins. Theories, trauma, <span class="flicker">emotions like a joke</span> — no sobbing, just blood.</p>
     </section>
     <section>
       <h2>Darklog</h2>
-      <p>Like if a clown kept a diary in a morgue. Mini-blog: whining, punchlines, dark humor, loneliness, daily decay — not to hug, just to inhale.</p>
+      <p>Like if a clown kept a diary in a morgue. Mini-blog: whining, punchlines, <span class="flicker">dark humor</span>, loneliness, daily decay — not to hug, just to inhale.</p>
     </section>
     <section>
       <h2>Noise</h2>
-      <p>Somewhere between VHS nightmares and whispers on a 4:03 AM frequency. GIFs, visuals, random vibes. No context, no goal, just anxiety.</p>
+      <p>Somewhere between VHS nightmares and whispers on a 4:03 AM frequency. GIFs, visuals, <span class="flicker">random vibes</span>. No context, no goal, just anxiety.</p>
     </section>
     <section>
       <h2>Archive</h2>
-      <p>Dump of thoughts, mistakes and exhaustion. Old drafts, forgotten fragments — like a post-depression brain: everything’s there, nothing makes sense.</p>
+      <p>Dump of thoughts, mistakes and exhaustion. Old drafts, forgotten fragments — like a post-depression brain: <span class="flicker">everything’s there, nothing makes sense</span>.</p>
     </section>
   </main>
 </body>
