--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 <body>
 
   <!-- Амбиграмма/фоновые фразы -->
-  <div class="background-phrases">
-    <div class="ambigram">THE BODY IS A VESSEL</div>
-    <div class="floating-text">You are already dead.</div>
-    <div class="floating-text">404: meaning not found</div>
-    <div class="floating-text">Sleep.exe running</div>
-    <div class="floating-text">Echoes in blood</div>
-    <div class="floating-text">Null memory</div>
-    <div class="floating-text">[UNDEFINED]</div>
-  </div>
+<div class="background-phrases">
+  <div class="ambigram">THE BODY IS A VESSEL</div>
+  <div class="floating-text" data-random>you are already dead</div>
+  <div class="floating-text" data-random>404: meaning not found</div>
+  <div class="floating-text" data-random>sleep.exe running</div>
+  <div class="floating-text" data-random>echoes in blood</div>
+  <div class="floating-text" data-random>null memory</div>
+  <div class="floating-text" data-random>[undefined]</div>
+</div>
 
   <!-- Хаотично расположенные изображения -->
   <div class="chaotic-images">
