--- a/index.html
+++ b/index.html
@@ -84,5 +84,18 @@
       <p>Dump of thoughts, mistakes and exhaustion. Old drafts, forgotten fragments — like a post-depression brain: <span class="flicker">everything’s there, nothing makes sense</span>.</p>
     </section>
   </main>
+  <div class="matrix-column matrix-left">
+  <span class="matrix-line">0101010101 ███ █ █ █ 001100</span>
+  <span class="matrix-line">dead.log // loading...</span>
+  <span class="matrix-line">error: undefined_null_0x0</span>
+  <span class="matrix-line">𓂀 ☠ ☰ ☵ ☠ ☾ ⛧ </span>
+</div>
+
+<div class="matrix-column matrix-right">
+  <span class="matrix-line">~ process dreaming...</span>
+  <span class="matrix-line">! run.sleep().eternal()</span>
+  <span class="matrix-line">✞ ✞ ✞ ███ ✞ ✞ ✞</span>
+  <span class="matrix-line">#fragment[null] → .</span>
+</div>
 </body>
 </html>
