--- a/index.html
+++ b/index.html
@@ -18,9 +18,8 @@
 </head>
 <body>
 
-  <!-- Амбиграмма/фоновые фразы -->
+  <!-- Фоновые фразы -->
   <div class="background-phrases">
-    <div class="ambigram">THE BODY IS A VESSEL</div>
     <div class="floating-text" data-random>you are already dead</div>
     <div class="floating-text" data-random>404: meaning not found</div>
     <div class="floating-text" data-random>sleep.exe running</div>
@@ -29,7 +28,7 @@
     <div class="floating-text" data-random>[undefined]</div>
   </div>
 
-  <!-- Хаотично расположенные изображения -->
+  <!-- Хаотичные изображения -->
   <div class="chaotic-images">
     <img src="images/giant-doll.jpg" alt="giant doll" class="chaotic-image" style="top: 60px; left: 8%;">
     <img src="images/green-screens.jpg" alt="green screens" class="chaotic-image" style="top: 200px; left: 65%;">
@@ -42,7 +41,7 @@
     <h1 class="glitch-title">Moth Damien</h1>
   </div>
 
-  <!-- Горизонтальная навигация -->
+  <!-- Навигация -->
   <nav class="horizontal-nav">
     <a href="skull.html">🧠 Inside the Skull</a>
     <a href="diagnosis.html">🩸 Diagnosis</a>
@@ -84,18 +83,21 @@
       <p>Dump of thoughts, mistakes and exhaustion. Old drafts, forgotten fragments — like a post-depression brain: <span class="flicker">everything’s there, nothing makes sense</span>.</p>
     </section>
   </main>
-  <div class="matrix-column matrix-left">
-  <span class="matrix-line">0101010101 ███ █ █ █ 001100</span>
-  <span class="matrix-line">dead.log // loading...</span>
-  <span class="matrix-line">error: undefined_null_0x0</span>
-  <span class="matrix-line">𓂀 ☠ ☰ ☵ ☠ ☾ ⛧ </span>
-</div>
 
-<div class="matrix-column matrix-right">
-  <span class="matrix-line">~ process dreaming...</span>
-  <span class="matrix-line">! run.sleep().eternal()</span>
-  <span class="matrix-line">✞ ✞ ✞ ███ ✞ ✞ ✞</span>
-  <span class="matrix-line">#fragment[null] → .</span>
-</div>
+  <!-- Матричный дождь по бокам -->
+  <div class="matrix-column matrix-left">
+    <span class="matrix-line">0101010101 ███ █ █ █ 001100</span>
+    <span class="matrix-line">dead.log // loading...</span>
+    <span class="matrix-line">error: undefined_null_0x0</span>
+    <span class="matrix-line">𓂀 ☠ ☰ ☵ ☠ ☾ ⛧ </span>
+  </div>
+
+  <div class="matrix-column matrix-right">
+    <span class="matrix-line">~ process dreaming...</span>
+    <span class="matrix-line">! run.sleep().eternal()</span>
+    <span class="matrix-line">✞ ✞ ✞ ███ ✞ ✞ ✞</span>
+    <span class="matrix-line">#fragment[null] → .</span>
+  </div>
+
 </body>
 </html>
