--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
   </style>
 </head>
 <body>
+<canvas id="matrix-canvas"></canvas>
+<div id="content-wrapper">
 
   <canvas id="matrix"></canvas>
 
@@ -135,5 +137,6 @@
     });
   </script>
 
+</div>
 </body>
 </html>
