--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
   </div>
 
   <div class="chaotic-images">
+    <img src="images/flamegator.png" alt="flamegator" class="chaotic-image drifting" data-random>
+    <img src="images/toilet_entity.png" alt="toilet_entity" class="chaotic-image drifting" data-random>
+    <img src="images/blackslime_face.png" alt="blackslime_face" class="chaotic-image drifting" data-random>
+    <img src="images/skeletopool.png" alt="skeletopool" class="chaotic-image drifting" data-random>
+    <img src="images/vodka_warrior.png" alt="vodka_warrior" class="chaotic-image drifting" data-random>
+    <img src="images/grimbeach.png" alt="grimbeach" class="chaotic-image drifting" data-random>
+
     <img src="images/giant-doll.jpg" alt="giant doll" class="chaotic-image" style="top: 60px; left: 8%;">
     <img src="images/green-screens.jpg" alt="green screens" class="chaotic-image" style="top: 200px; left: 65%;">
     <img src="images/digital-crucifix.jpg" alt="digital crucifix" class="chaotic-image" style="top: 350px; left: 35%;">
