--- a/chat.html
+++ b/chat.html
@@ -7,5 +7,6 @@
   <script src="interact.js" defer></script>
 </head>
 <body>
+  <!-- Вся магия чата создаётся внутри interact.js -->
 </body>
 </html>
