--- a/chat.html
+++ b/chat.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <script src="interact.js" defer></script>
 </head>
-<body>
-  <!-- Вся магия чата создаётся внутри interact.js -->
+<body style="background-color:#000; color:#ccc; font-family:monospace;">
+  <!-- Chat UI will be injected by interact.js -->
 </body>
 </html>
