--- a/chat.html
+++ b/chat.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>🤖 Chat: "I heard you"</title>
-  <link rel="stylesheet" href="style.css">
-  <script src="interact.js" defer></script>
+  <link rel="stylesheet" href="https://demiennemoth.github.io/demienne.moth/style.css">
+  <script src="https://demiennemoth.github.io/demienne.moth/interact.js" defer></script>
 </head>
-<body style="background-color:#000; color:#ccc; font-family:monospace;">
-  <!-- Chat UI will be injected by interact.js -->
+<body style="background:#000;">
+  <!-- Чат появится автоматически -->
 </body>
 </html>
