--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Moth Damien</title>
+  <title>Moth Demienne</title>
   <link rel="stylesheet" href="style.css">
   <script src="interact.js" defer></script>
 
@@ -59,7 +59,7 @@
 
   <div class="site-title">
     <img src="images/painted-cross.png" alt="cross" class="site-cross">
-    <h1 class="glitch-title">Moth Damien</h1>
+    <h1 class="glitch-title">Moth Damienne</h1>
   </div>
 
   <nav class="horizontal-nav">
