--- a/content.html
+++ b/content.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Moth Demyen</title>
+  <title>Moth Demienne</title>
 </head>
 <body>
   <section id="skull">
