--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Moth Demienne</title>
+  <title>Moth Damien</title>
   <link rel="stylesheet" href="style.css">
   <script src="interact.js" defer></script>
 
@@ -59,7 +59,7 @@
 
   <div class="site-title">
     <img src="images/painted-cross.png" alt="cross" class="site-cross">
-    <h1 class="glitch-title">Moth Damienne</h1>
+    <h1 class="glitch-title">Moth Damien</h1>
   </div>
 
   <nav class="horizontal-nav">
@@ -102,7 +102,23 @@
       <h2>Archive</h2>
       <p>Dump of thoughts, mistakes and exhaustion. Old drafts, forgotten fragments — like a post-depression brain: <span class="flicker">everything’s there, nothing makes sense</span>.</p>
     </section>
-  </main>
+  
+<section class="demon-directory">
+  <div class="demon-tab">
+    <h3>🩸 THEORIES</h3>
+    <p>Inside the Skull, Diagnosis, Simulation</p>
+  </div>
+  <div class="demon-tab">
+    <h3>🪓 EMOTIONAL DAMAGE</h3>
+    <p>Lobotomy Bandage, Darklog</p>
+  </div>
+  <div class="demon-tab">
+    <h3>📼 NOISE / ECHOES</h3>
+    <p>Noise, Archive, Chat</p>
+  </div>
+</section>
+
+</main>
 
   <script>
     const canvas = document.getElementById("matrix");
