--- a/index.html
+++ b/index.html
@@ -1,47 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Moth Damien</title>
-  <link rel="stylesheet" href="style.css" />
-  <script src="interact.js" defer></script>
+  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div class="vn-container">
-    <div class="vn-sidebar">
-      <button class="vn-button">TALK</button>
-      <button class="vn-button">BAG</button>
-      <button class="vn-button">NOTES</button>
-      <button class="vn-button">VITALS</button>
-      <button class="vn-button">LOOK</button>
-      <button class="vn-button">EXIT</button>
-    </div>
-    <div class="vn-portrait">
-      <img src="images/char_jester.png" alt="The Fool" />
-    </div>
-    <div class="vn-dialogue-box">
-      <div class="vn-name">THE FOOL</div>
-      <p class="vn-line">You've opened it again... Why?</p>
-    </div>
-  </div>
-
-  <div class="vn-cards">
-    <div class="vn-card">
-      <img src="images/char_jester.png" alt="Fool" />
-      <p>THE FOOL</p>
-    </div>
-    <div class="vn-card">
-      <img src="images/char_brokenboy.png" alt="Broken Vessel" />
-      <p>BROKEN VESSEL</p>
-    </div>
-    <div class="vn-card">
-      <img src="images/char_smiletear.png" alt="Laughing Pain" />
-      <p>LAUGHING PAIN</p>
-    </div>
-    <div class="vn-card">
-      <img src="images/char_brain.png" alt="Simulated Consciousness" />
-      <p>SIMULATED CONSCIOUSNESS</p>
-    </div>
+  <div class="container">
+    <aside class="menu-panel">
+      <button>Talk</button>
+      <button>Bag</button>
+      <button>Notes</button>
+      <button>Vitals</button>
+      <button>Look</button>
+      <button>Exit</button>
+    </aside>
+    <main class="dialogue-panel">
+      <div class="avatar-frame">
+        <img src="images/char_jester.png.png" alt="The Fool">
+      </div>
+      <div class="dialogue-box">
+        <h2>THE FOOL</h2>
+        <p>You've opened it again... <span class="glitch">Why?</span></p>
+      </div>
+    </main>
   </div>
 </body>
 </html>
